# RuCobot

./: README.md  run_all.launch
devel/: .catkin  .rosinstall  setup.sh
devel/lib/joint_for_arm/: joint_for_arm_node
devel/lib/moveit/: moveit_node
devel/lib/pkgconfig/: joint_for_arm.pc  moveit.pc  moveit_ikfast.pc  rucobot_moveit.pc  using_markers.pc
devel/lib/using_markers/: basic_shapes
gazebo_rucobot_plugin/: CMakeLists.txt  rucobot_plugin.cc  send_task_to_plugin.cc
src/: CMakeLists.txt.user.b9dd25b
src/joint_for_arm/: CMakeLists.txt  package.xml
src/joint_for_arm/src/: gui_joint_for_arm.cpp  gui_joint_for_arm.h  joint_for_arm.cpp
src/moveit/: CMakeLists.txt
src/moveit/headers/: planner.h
src/moveit/src/: main.cpp
src/rucobot/: manifest.xml
src/rucobot/launch/: display.launch  gazebo.launch  joint_state_publisher.launch
src/rucobot/meshes/: Sharnir_pojasa.STL  Tors.STL  base_link.STL  bolshoj_osnova_l.STL  bolshoj_osnova_r.STL  distal_falang_bolshoy_l.STL  distal_falang_bolshoy_r.STL  distal_falanga_bezim_l.STL  distal_falanga_bezim_r.STL  distal_falanga_miz_l.STL  distal_falanga_miz_r.STL  distal_falanga_sred_l.STL  distal_falanga_sred_r.STL  distal_falanga_ukaz_l.STL  distal_falanga_ukaz_r.STL  golova.STL  ladon_l.STL  ladon_r.STL  lokot_l.STL  lokot_r.STL  medial_falanga_bezim_l.STL  medial_falanga_bezim_r.STL  medial_falanga_bolshoj_l.STL  medial_falanga_bolshoy_r.STL  medial_falanga_miz_l.STL  medial_falanga_miz_r.STL  (+36 more)
src/rucobot_moveit/: .setup_assistant  CMakeLists.txt
src/rviz_objects/: CMakeLists.txt  package.xml  plane.stl
(+32 files in other folders)
